      Reported by Jakub Wilk <jwilk@debian.org>.
    - Do not warn when removing an empty subdirectory on source package
      extraction in Dpkg::Source::Package::V2. Closes: #796671
    - Do not abort on parse errors from Time::Piece->strptime() for the
      changelog trailer date, just queue them so that the caller can decide
      if they should be warnings or actual errors. Closes: #795936
  * Test suite:
    - Get the reference build flags from dpkg-buildflags.pl, instead of
      hardcoding them, which might not match depending on the architecture.
      Closes: #794694
  * Packaging:
    - Remove unneeded --sourcedir options from dh_install calls.
    - Do not change libdir to a multi-arch directory for the entire dpkg.
      This changes too many directories that are expected to be non-multiarch
      aware. Closes: #794977
  * Documentation:
    - Fix typos for --predep-package option name. Closes: #794688

  [ Updated programs translations ]
  * Catalan (Jordi Mallach).
  * French (Sébastien Poher). Closes: #798371
  * German (Sven Joachim).

  [ Updated dselect translations ]
  * French (Sébastien Poher). Closes: #798370

  [ Updated scripts translations ]
  * French (Sébastien Poher). Closes: #798369
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Wed, 05 Aug 2015 03:10:02 +0200

dpkg (1.18.2) unstable; urgency=low

  [ Guillem Jover ]
  * Fix plural form translations for single plural languages. Closes: #790025
  * Add new dpkg-buildpackage -J option, which is a safe version of -j.
  * Fix dpkg-gencontrol to add correct binary filename to debian/files,
    even when overriding the Package field value with the -D option.
    Reported by Niels Thykier <niels@thykier.net>.
  * Move the implicit build-essential:native Build-Depends from
    dpkg-checkbuilddeps to a new vendor hook, as it is Debian-specific.
  * Add support for ignoring built-in build dependencies and conflicts